fix: remove extra padding from hamburger menu icon

--- a/style.css
+++ b/style.css
@@ -242,7 +242,7 @@ footer .logo-container img {
   align-items: center;
   width: 80px;
   cursor: pointer;
-  padding-right: 2rem;
+  /* padding-right: 2rem; */
   transition: all 0.5s ease-in-out;
 }
 
